SONARIAC-504 Newlines without prior spaces provoke parsing errors (#482)
* SONARIAC-504 Newlines without prior spaces provoke parsing errors

* SONARIAC-503 Multiline ENV provokes parsing errors